# OpsArtisan

./: .gitignore  LICENSE  MANIFEST.in  README.md  add-system-template.sh  build-deb.sh  install.sh  main.py  opsartisan.py  pyproject.toml  requirements.txt  setup.py
docs/: Guides.md  Install.md  Integration.md  Template-Authoring.md
opsartisan/: __init__.py  __main__.py  cli.py  config.py
opsartisan/core/: __init__.py  cli_additions.py  dependency_resolver.py  env_manager.py  environment_manager.py  hooks.py  marketplace.py  plugin_manager.py  preset_manager.py  prompter.py  template_manager.py  validator.py
opsartisan/utils/: __init__.py  async_utils.py  completion.py  file_utils.py  template_utils.py  validation_utils.py
prebuild_deb_package/: opsartisan_2.0.0_all.deb
templates/ansible/: descriptor.json
templates/ansible/templates/: ansible_cfg.j2  ansible_lint.j2  empty.j2  group_vars.j2  inventory_ini.j2  inventory_yaml.j2  playbook.j2  readmee.j2  role_defaults.j2  role_handlers.j2  role_meta.j2  role_tasks.j2  role_vars.j2  tasks.j2  vault_secrets.j2
templates/ci-pipeline/: descriptor.json
templates/ci-pipeline/templates/: dependabot.j2  deploy.j2  github.j2  gitlab.j2  jenkins.j2  readme.j2
templates/cron/: descriptor.json
templates/cron/templates/: cronjob.j2  job_script.j2  k8s_cronjob.j2  readme.j2  systemd_service.j2  systemd_timer.j2  wrapper_script.j2
templates/deploy-kit/: descriptor.json
templates/deploy-kit/templates/: docker-compose.j2  service.j2
templates/docker-compose/: descriptor.json
templates/docker-compose/templates/: docker-compose.j2
templates/docker-health/: descriptor.json
templates/docker-health/templates/: healthcheck.j2
templates/dockerfile/: descriptor.json
templates/dockerfile/templates/: Dockerfile.j2  docker_compose.j2  dockerignore.j2  entrypoint.j2  env_example.j2  readme.j2  (+2 more)
templates/firewall/: descriptor.json
templates/kubernetes/: descriptor.json
templates/openssl/: descriptor.json
templates/prometheus/: descriptor.json
templates/systemd/: descriptor.json
templates/terraform/: descriptor.json
templates/user-setup/: descriptor.json
templates/vhost/: descriptor.json
(+82 files in other folders)
